--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><%= Setting.render(:name).upcase %></a>
+            <%= link_to Setting.render(:name).upcase, (sub_url.blank? ? '/' : sub_url), class: 'navbar-brand' %>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
