--- a/app/views/settings/index.js.erb
+++ b/app/views/settings/index.js.erb
@@ -1,3 +1,4 @@
-$('span#<%= params[:setting] %>').show();
-$('span#<%= params[:setting] %>').html('Saved...');
-$('span#<%= params[:setting] %>').fadeOut(1000);
+console.log('<')
+
+$('input#<%= params[:setting] %>_button')[0].value = 'Save ✓';
+window.setTimeout(function() { $('input#<%= params[:setting] %>_button')[0].value = 'Save'; }, 1000);
