start redoing music routes for easier json responses

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
       <%= link_to image_tag('icon_1895.svg', width: '100%'), movies_path %>
     </div>
     <div class="col-md-4">
-      <%= link_to image_tag('icon_2013.svg', width: '100%'), music_index_path  %>
+      <%= link_to image_tag('icon_2013.svg', width: '100%'), songs_path  %>
     </div>
   </div>
   <div class="row">
