--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
               <% end %>
 
               <li class="divider"></li>
-              <li><%= link_to "Music", music_index_path %></li>
+              <li><%= link_to "Music", songs_path %></li>
 
               <li class="divider"></li>
               <% Page.navbar.each do |page| %>
