--- a/app/views/music/index.html.erb
+++ b/app/views/music/index.html.erb
@@ -1,37 +1,7 @@
-<div class="row">
-  <div class="col-md-3">
-    <h1> <%= link_to "Music", music_index_path, remote: true %> </h1>
-  </div>
-  <div class="col-md-9">
-    <div style="height:20px"></div>
-    <nav class="navbar navbar-default">
-      <ul class="nav navbar-nav">
-        <li><a href="#" id="back"><span class="glyphicon glyphicon-step-backward"></span></a></li>
-        <li><a href="#" id="play-pause" class="pause"><span id="play-pause-span" class="glyphicon glyphicon-pause"></span></a></li>
-        <li><a href="#" id="forward"><span class="glyphicon glyphicon-step-forward"></span></a></li>
-        <li><a id="now-playing">Nothing playing yet...</a></li>
-        <li></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right" style="padding-right:10px;">
-        <li><a href="#" onClick="$('#playlist-div').toggle()">Playlist</a></li>
-      </ul>
-    </nav>
-    <div id="playlist-div" style="display:none;" class="well">
-      <legend>Playlist</legend>
-      <ul id="playlist" class='tracklist'>
-      </ul>
-      <audio autoplay="autoplay" id="nav-audio-controls">
-        <source src="" id="nav-audio-source">
-      </audio>
-    </div>
-    <%= form_tag music_index_path, method: :get, remote: true do %>
-      <input type="text" class="form-control" placeholder="Filter Artists" name="artist">
-    <% end %>
-  </div>
-</div>
+<div id="content-area" ></div>
 
-<div id="content">
-  <%= render partial: @partial %>
-</div>
+<div id="player"></div>
 
-<%= javascript_include_tag 'application', 'music' %>
+<%= javascript_include_tag 'underscore-min.js'%>
+<%= javascript_include_tag 'backbone-min.js'%>
+<%= javascript_include_tag 'musicjs.min.js'%>
